fix the problem of "theme color (prefers-color-scheme)" settings changing website color on mobile devices.

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: white !important;
+  color: black !important;
 }
 
 a {
@@ -61,7 +64,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -72,7 +75,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
 
 @layer base {
   :root {
